bk_ida/gccida/c1/cse_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5222:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5230:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5230:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5231:4: error: expected ';' after expression
rtx v20; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5231:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // r14 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5221:18: note: 'v10' declared here
 struct rtx_def *v10; // rdi 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5245:4: error: expected ';' after expression
rtx v34; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5245:5: error: use of undeclared identifier 'v34'
rtx v34; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5252:4: error: expected ';' after expression
rtx v41; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5252:5: error: use of undeclared identifier 'v41'
rtx v41; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5253:4: error: expected ';' after expression
rtx v42; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5253:5: error: use of undeclared identifier 'v42'
rtx v42; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5256:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5262:4: error: expected ';' after expression
rtx v51; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5262:5: error: use of undeclared identifier 'v51'
rtx v51; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5270:4: error: expected ';' after expression
rtx v59; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5270:5: error: use of undeclared identifier 'v59'
rtx v59; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5280:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v69; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5291:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v80; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/cse.c:5299:4: error: expected ';' after expression
rtx v88; // r13 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cse_insn/src/obj/cse.o] Error 1
